--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <!-- Courses Dropdown -->
             <li class="dropdown" onclick="event.stopPropagation()">
                 <span class="dropbtn" onclick="toggleCourses()" title="Courses Offered by Sri Spardha Academy">
-                    <a href="#course">Courses</a> <i class="fa fa-chevron-down"></i>
+                    <a href="#courses">Courses</a> <i class="fa fa-chevron-down"></i>
                 </span>
                 <ul class="dropdown-content" id="coursesMenu">
                     <li>
@@ -243,7 +243,7 @@
 </section>
 
 <!-- Courses Section -->
-<section id="course" class="courses-home">
+<section id="courses" class="courses-home">
     <h2 class="section-title">Our Popular Courses</h2>
     <p class="section-subtitle">
         Comprehensive coaching programs designed for Government exam success
@@ -295,6 +295,83 @@
   <span>Live Chat</span>
 </a>
 
+
+<section id="reviews" class="google-reviews">
+    <h2 class="google-title">Student Reviews</h2>
+    <div class="google-line"></div>
+
+    <div class="review-container">
+
+        <!-- Left rating box -->
+        <div class="google-rating-box">
+            <h1>5.0</h1>
+            <div class="stars">★★★★★</div>
+            <p>Based on student reviews</p>
+        </div>
+
+        <!-- Slider -->
+        <div class="review-slider">
+            <button class="slider-btn left" id="prevBtn">&#10094;</button>
+
+            <div class="slider-viewport">
+                <div class="slider-track" id="sliderTrack">
+
+                    <div class="google-card">
+                        <h4>Thejas Reddy</h4>
+                        <div class="stars small">★★★★★</div>
+                        <p>
+                        The institute gives value to one's education following up and giving in details about competitive exams and career buliding opportunity available. Classes conducted here are interactive wherein the faculties help with all kinds of clarification and teach what's required to handle the exam with ease along with providing additional tips and tricks required to crack the exams.
+                        Overall a recommended institute to start the journey of cracking a competitive exam.
+                        </p>
+                    </div>
+
+                    <div class="google-card">
+                        <h4>Guddappa N</h4>
+                        <div class="stars small">★★★★★</div>
+                        <p>
+                        Recently, I joined my coaching in Sri Spardha Academy. Best coaching Centre in Bangalore, competitive exams in this app provide complete video classes, notes and current affairs also provided free library facilities, and they provide weekly test paper will be helpful for us 
+                        Thank you, Sri Spardha academy
+                        </p>
+                    </div>
+
+                    <div class="google-card">
+                        <h4>Radha A</h4>
+                        <div class="stars small">★★★★★</div>
+                        <p>
+                        This is the best coaching institution in Bangalore .I was visited so many institutions for kannada coaching but i am not able to find proper kannada coaching centre, since one year I am searching and finaly I got best coaching centre in Koramangala, now a days all are working people is there that people think achieve something, in this institution morning classes so helpful to working people, And also here facilitys are best which made me understand each and every concept clearly, I am satisfied with classes. it is a wonderful training institute very favorable institution for poor students
+                        Thank you so much , Spardha academy.
+                        </p>
+                    </div>
+
+                    <div class="google-card">
+                        <h4>Shruthi M</h4>
+                        <div class="stars small">★★★★★</div>
+                        <p>
+                        Recently I joined my coaching in sri spardha academy good teaching faculty and best competitive exam coaching centre best platform to study.they provide study material free library facility online recorded class etc..now a days all are working people is three that people think achive something in this institution morning classes so helpful to working people.im so satisfied with classes.
+                        Thank you so much sri spardha academy .
+                        </p>
+                    </div>
+
+                    <div class="google-card">
+                        <h4>Karabasappa N</h4>
+                        <div class="stars small">★★★★★</div>
+                        <p>
+                        I have taken coaching in Sri Spardha academy best coaching Centre, many library facilities and all GK subject study materials for everyone
+                        I taken coaching for KAS,PSI,FDA and SDA They also provide good physical training for PSI job
+                        Thank you Sri Spardha academy
+                        LearnT many things in this institute ,I will never forget in future
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+
+            <button class="slider-btn right" id="nextBtn">&#10095;</button>
+        </div>
+
+    </div>
+</section>
+
 <!-- Footer Section -->
 <footer class="footer-modern">
     <div class="footer-wave"></div>
@@ -322,10 +399,10 @@
             <h4>Quick Links</h4>
             <ul>
                 <li><a href="index.html" title="Sri Spardha Academy Home">Home</a></li>
-                <li><a href="#course" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
-                <li><a href="" title="About Sri Spardha Academy">About</a></li>
+                <li><a href="#courses" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
+                <li><a href="about.html" title="About Sri Spardha Academy">About</a></li>
                 <li><a href="result.html" title="Our Successful Students">Achievements</a></li>
-                <li><a href="/" title="Review of Sri Spardha Academy">Reviews</a></li>
+                <li><a href="#reviews" title="Review of Sri Spardha Academy">Reviews</a></li>
                 <li><a href="contact.html" title="Contact Sri Spardha Academy">Contact</a></li>
             </ul>
         </div>
@@ -353,7 +430,7 @@
             <div class="footer-map">
                 <h4>Our Location</h4>
                 <iframe
-                    src="https://www.google.com/maps?q=Vajarahalli,Bengaluru&output=embed"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.5071742045766!2d77.5368341!3d12.875076000000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3fdf3cf7cb43%3A0x67c605e70d157907!2sSri%20Spardha%20Academy%20Vajarahalli!5e0!3m2!1sen!2sin!4v1768219842078!5m2!1sen!2sin"
                     width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
