--- a/kas.html
+++ b/kas.html
@@ -262,15 +262,12 @@
                 <li>Public/Civil service values and Ethics in Public administration: Status and problems; ethical concerns and dilemmas in government and private institutions; laws, rules, regulations and conscience as sources of ethical guidance; accountability and ethical governance; strengthening of ethical and moral values in governance; ethical issues in international relations and funding; corporate governance.</li>
                 <li>Probity in Governance: Concept of public service; Philosophical basis of governance and probity; Information sharing and transparency in government, Right to Information, Codes of Ethics, Codes of Conduct, Citizenâ€™s Charters, Work culture, Quality of service delivery, Utilization of public funds, challenges of corruption.</li>
                 <li>Case Studies on above issues.
-Best KPSC Coaching classes in Bangalore, KAS Coaching Centres in Bangalore, Best KPSC Coaching Institute in Bangalore, KPSC Exam, Best KPSC Exam Coaching Centre In Bangalore, Karnataka
-
-Welcome to the premier destination for KPSC coaching in Bangalore!
-
-Looking for the best KPSC coaching classes in Bangalore to help you excel in the Karnataka Administrative Service (KAS) exam? Look no further than our top-rated KPSC coaching institute in Bangalore. Our expert faculty, comprehensive study material, and personalized approach to teaching have helped countless students achieve their dreams of success in the KPSC exam.
-
-Our KAS coaching centres in Bangalore provide the perfect environment for focused learning and preparation. Our experienced faculty members are dedicated to helping you master every aspect of the exam, from general studies to optional subjects. Our proven track record of success speaks for itself, with many of our students securing top marks in the KPSC exam.
-
-Don't settle for anything less than the best when it comes to preparing for the KPSC exam. Choose the best KPSC exam coaching centre in Bangalore, Best KPSC Coaching classes in Bangalore, KAS Coaching Centres in Bangalore, Best KPSC Coaching Institute in Bangalore, KPSC Exam, Best KPSC Exam Coaching Centre In Bangalore, Karnataka and ensure that you are fully prepared to ace the exam. Join us today and take the first step towards a successful career in the Karnataka Administrative Service.</li>
+                Best KPSC Coaching classes in Bangalore, KAS Coaching Centres in Bangalore, Best KPSC Coaching Institute in Bangalore, KPSC Exam, Best KPSC Exam Coaching Centre In Bangalore, Karnataka Welcome to the premier destination for KPSC coaching in Bangalore! 
+                Looking for the best KPSC coaching classes in Bangalore to help you excel in the Karnataka Administrative Service (KAS) exam? Look no further than our top-rated KPSC coaching institute in Bangalore. Our expert faculty, comprehensive study material, and
+                personalized approach to teaching have helped countless students achieve their dreams of success in the KPSC exam.Our KAS coaching centres in Bangalore provide the perfect environment for focused learning and preparation. Our experienced faculty members 
+                are dedicated to helping you master every aspect of the exam, from general studies to optional subjects. Our proven track record of success speaks for itself, with many of our students securing top marks in the KPSC exam. Don't settle for anything less 
+                than the best when it comes to preparing for the KPSC exam. Choose the best KPSC exam coaching centre in Bangalore, Best KPSC Coaching classes in Bangalore, KAS Coaching Centres in Bangalore, Best KPSC Coaching Institute in Bangalore, KPSC Exam, Best KPSC
+                 Exam Coaching Centre In Bangalore, Karnataka and ensure that you are fully prepared to ace the exam. Join us today and take the first step towards a successful career in the Karnataka Administrative Service.</li>
                 
             </ul>
         </div>
@@ -310,10 +307,10 @@ Don't settle for anything less than the best when it comes to preparing for the 
             <h4>Quick Links</h4>
             <ul>
                 <li><a href="index.html" title="Sri Spardha Academy Home">Home</a></li>
-                <li><a href="/" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
-                <li><a href="/" title="About Sri Spardha Academy">About</a></li>
+                <li><a href="#cpurses" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
+                <li><a href="about.html" title="About Sri Spardha Academy">About</a></li>
                 <li><a href="result.html" title="Our Successful Students">Achievements</a></li>
-                <li><a href="/" title="Review of Sri Spardha Academy">Reviews</a></li>
+                <li><a href="#reviews" title="Review of Sri Spardha Academy">Reviews</a></li>
                 <li><a href="contact.html" title="Contact Sri Spardha Academy">Contact</a></li>
             </ul>
         </div>
@@ -341,7 +338,7 @@ Don't settle for anything less than the best when it comes to preparing for the 
             <div class="footer-map">
                 <h4>Our Location</h4>
                 <iframe
-                    src="https://www.google.com/maps?q=Vajarahalli,Bengaluru&output=embed"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.5071742045766!2d77.5368341!3d12.875076000000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3fdf3cf7cb43%3A0x67c605e70d157907!2sSri%20Spardha%20Academy%20Vajarahalli!5e0!3m2!1sen!2sin!4v1768219842078!5m2!1sen!2sin"
                     width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
