--- a/result.html
+++ b/result.html
@@ -18,14 +18,35 @@
     <div class="achievements-grid">
 
       <!-- Card -->
+
+      <div class="achievement-card">
+        <img src="images/UMADEVI(PSI 1st Rank).jpeg" alt="Umadevi">
+        <div class="info">
+          <h3>UMADEVI</h3>
+          <p class="exam">PSI</p>
+          <span class="rank gold">Rank 1</span>
+        </div>
+      </div>
+
       <div class="achievement-card">
         <img src="images/ARUN(PSI - 12th Rank).jpeg" alt="Arun">
         <div class="info">
           <h3>ARUN</h3>
           <p class="exam">PSI</p>
-          <span class="rank">Rank 12</span>
+          <span class="rank gold">Rank 12</span>
         </div>
       </div>
+
+      <div class="achievement-card">
+        <img src="images/SRINIVAS (PSI 28th Rank).jpeg" alt="Srinivas">
+        <div class="info">
+          <h3>SRINIVAS</h3>
+          <p class="exam">PSI</p>
+          <span class="rank gold">Rank 28</span>
+        </div>
+      </div>
+
+     
 
       <div class="achievement-card">
         <img src="images/CHARAN (ESI).jpeg" alt="Charan">
@@ -91,23 +112,6 @@
         </div>
       </div>
 
-      <div class="achievement-card">
-        <img src="images/SRINIVAS (PSI 28th Rank).jpeg" alt="Srinivas">
-        <div class="info">
-          <h3>SRINIVAS</h3>
-          <p class="exam">PSI</p>
-          <span class="rank">Rank 28</span>
-        </div>
-      </div>
-
-      <div class="achievement-card">
-        <img src="images/UMADEVI(PSI 1st Rank).jpeg" alt="Umadevi">
-        <div class="info">
-          <h3>UMADEVI</h3>
-          <p class="exam">PSI</p>
-          <span class="rank gold">Rank 1</span>
-        </div>
-      </div>
 
     </div>
   </div>
@@ -143,12 +147,12 @@
         <div class="footer-links">
             <h4>Quick Links</h4>
             <ul>
-                <li><a href="/" title="Sri Spardha Academy Home">Home</a></li>
-                <li><a href="/" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
-                <li><a href="/" title="About Sri Spardha Academy">About</a></li>
-                <li><a href="/" title="Our Successful Students">Our Students</a></li>
-                <li><a href="/" title="Review of Sri Spardha Academy">Reviews</a></li>
-                <li><a href="/" title="Contact Sri Spardha Academy">Contact</a></li>
+                <li><a href="index.html" title="Sri Spardha Academy Home">Home</a></li>
+                <li><a href="#courses" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
+                <li><a href="about.html" title="About Sri Spardha Academy">About</a></li>
+                <li><a href="result.html" title="Our Successful Students">Achievements</a></li>
+                <li><a href="#reviews" title="Review of Sri Spardha Academy">Reviews</a></li>
+                <li><a href="contact.html" title="Contact Sri Spardha Academy">Contact</a></li>
             </ul>
         </div>
 
@@ -175,7 +179,7 @@
             <div class="footer-map">
                 <h4>Our Location</h4>
                 <iframe
-                    src="https://www.google.com/maps?q=Vajarahalli,Bengaluru&output=embed"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.5071742045766!2d77.5368341!3d12.875076000000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3fdf3cf7cb43%3A0x67c605e70d157907!2sSri%20Spardha%20Academy%20Vajarahalli!5e0!3m2!1sen!2sin!4v1768122129685!5m2!1sen!2sin"
                     width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
