--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <div class="form-box">
       <h3>Enquiry Form</h3>
 
-      <form id="enquiryForm" method="POST">
+      <form id="enquiryForm" method="POST" action="submit.php">
 
         <!-- Branch Selector -->
         <div class="branch-selector">
