--- a/kas.html
+++ b/kas.html
@@ -30,7 +30,7 @@
                 </span>
             </div>
 
-            <!-- Enroll Button -->
+            
             <a href="https://chat.whatsapp.com/YOUR_GROUP_LINK"
                target="_blank"
                class="enroll-btn">
@@ -162,7 +162,7 @@
                 <li>General Intelligence</li>
                 <li>Coding & Decoding</li>
                 <li>Indian National Movement</li>
-                <img src="images/sub.png" alt="subjects">
+                <img src="images/sub.png" alt="subjects" >
                 
             </ul>
         </div>
@@ -310,7 +310,7 @@
                 <li><a href="#cpurses" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
                 <li><a href="about.html" title="About Sri Spardha Academy">About</a></li>
                 <li><a href="result.html" title="Our Successful Students">Achievements</a></li>
-                <li><a href="#reviews" title="Review of Sri Spardha Academy">Reviews</a></li>
+                <li><a href="index.html#reviews" title="Review of Sri Spardha Academy">Reviews</a></li>
                 <li><a href="contact.html" title="Contact Sri Spardha Academy">Contact</a></li>
             </ul>
         </div>
