--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
             <h4>Quick Links</h4>
             <ul>
                 <li><a href="index.html" title="Sri Spardha Academy Home">Home</a></li>
-                <li><a href="#courses" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
+                <li><a href="index.html#courses" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
                 <li><a href="about.html" title="About Sri Spardha Academy">About</a></li>
                 <li><a href="result.html" title="Our Successful Students">Achievements</a></li>
                 <li><a href="index.html#reviews" title="Review of Sri Spardha Academy">Reviews</a></li>
