--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 <div class="announcement">
     <div class="scrolling-text">
-        📢 Admissions Open for Govt Exams, IT courses & Career-Oriented | Limited Seats Available | Enroll Now at Sri Spardha Academy
+        📢 Admissions Open for Govt Exams | Limited Seats Available | Enroll Now at Sri Spardha Academy
     </div>
 </div>
 
