--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <li><a href="#result" title="Our Successful Students">Achievements</a></li>
             <li><a href="#reviews" title="Review of Sri Spardha Academy">Reviews</a></li>
             <li><a href="contact.html" title="Contact Sri Spardha Academy">Contact</a></li>
+            <li><a href="blog.html" title="Academy Blog">Blogs</a></li>
         </ul>
         
     </nav>
@@ -409,6 +410,7 @@
                 <li><a href="result.html" title="Our Successful Students">Achievements</a></li>
                 <li><a href="#reviews" title="Review of Sri Spardha Academy">Reviews</a></li>
                 <li><a href="contact.html" title="Contact Sri Spardha Academy">Contact</a></li>
+                <li><a href="blog.html" title="Academy Blog">Blogs</a></li>
             </ul>
         </div>
 
