--- a/kas.html
+++ b/kas.html
@@ -312,6 +312,7 @@
                 <li><a href="result.html" title="Our Successful Students">Achievements</a></li>
                 <li><a href="index.html#reviews" title="Review of Sri Spardha Academy">Reviews</a></li>
                 <li><a href="contact.html" title="Contact Sri Spardha Academy">Contact</a></li>
+                <li><a href="blog.html" title="Academy Blog">Blogs</a></li>
             </ul>
         </div>
 
